src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-60.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units ab=mils\")"
---
items:
  - loc: "#units ab=mils"
    locs:
      directive: "#units"
    options:
      - loc: ab=mils
        locs:
          option: ab
          unit: mils
        option: BacksightAzimuthUnit
        unit: Mils
    type: UnitsDirective
