src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-61.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units ab=blargh\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units ab=blargh"
        locs:
          directive: "#units"
        options:
          - INVALID:
              loc: ab=blargh
              locs:
                option: ab
                unit: blargh
              option: BacksightAzimuthUnit
              unit: blargh
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EINVALIDAZIMUTHUNIT
    loc: blargh
    message: Invalid azimuth unit
    severity: Error
