src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-65.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units v=degrees\")"
---
items:
  - loc: "#units v=degrees"
    locs:
      directive: "#units"
    options:
      - loc: v=degrees
        locs:
          option: v
          unit: degrees
        option: FrontsightInclinationUnit
        unit: Degrees
    type: UnitsDirective
