src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-66.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units v=g\")"
---
items:
  - loc: "#units v=g"
    locs:
      directive: "#units"
    options:
      - loc: v=g
        locs:
          option: v
          unit: g
        option: FrontsightInclinationUnit
        unit: Grads
    type: UnitsDirective
