src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-68.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units v=m\")"
---
items:
  - loc: "#units v=m"
    locs:
      directive: "#units"
    options:
      - loc: v=m
        locs:
          option: v
          unit: m
        option: FrontsightInclinationUnit
        unit: Mils
    type: UnitsDirective
