src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-69.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units v=mils\")"
---
items:
  - loc: "#units v=mils"
    locs:
      directive: "#units"
    options:
      - loc: v=mils
        locs:
          option: v
          unit: mils
        option: FrontsightInclinationUnit
        unit: Mils
    type: UnitsDirective
