src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-7.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units order=da\")"
---
items:
  - loc: "#units order=da"
    locs:
      directive: "#units"
    options:
      - loc: order=da
        locs:
          option: order
          order: da
        option: CompassAndTapeOrder
        order:
          - Distance
          - Azimuth
    type: UnitsDirective
